--- a/source/layouts/_team.html.erb
+++ b/source/layouts/_team.html.erb
@@ -1,5 +1,5 @@
 <ul class="list-inline text-center">
-  <% ["Jack", "Cohen", "jackcohen"].each do |gh_username| %>
+  <% ["jackc332", "bencho31"].each do |gh_username| %>
     <li>
       <%= image_tag "https://kitt.lewagon.com/placeholder/users/#{gh_username}", class: "img-circle" %>
       <h3><%= gh_username.capitalize %></h3>
