--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -8,7 +8,7 @@
     <a href="" class="navbar-wagon-item navbar-wagon-link">Host</a>
     <a href="" class="navbar-wagon-item navbar-wagon-link">Trips</a>
     <a href="" class="navbar-wagon-item navbar-wagon-link">Messages</a>
-    <a href="/about.html" class="navbar-wagon-item navbar-wagon-link">About</a>
+    <a href="team.html" class="navbar-wagon-item navbar-wagon-link">meet the team</a>
 
     <!-- Profile picture with dropdown list -->
     <div class="navbar-wagon-item">
