--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,6 +14,7 @@
   </head>
   <body>
     <%= partial "layouts/navbar" %>
+    <%= partial "layouts/banner" %>
     <%= yield %>
     <%= partial "layouts/footer" %>
   </body>
